k8s/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: messaging-service
  namespace: backend
  labels:
    app: messaging-service
spec:
  replicas: 2
  selector:
    matchLabels:
      app: messaging-service
  template:
    metadata:
      labels:
        app: messaging-service
    spec:
      imagePullSecrets:
        - name: regcred
      containers:
        - name: backend
          image: kyankee6/watermelon-messaging-service:cbad98a
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: messaging-service-head
  namespace: backend
spec:
  selector:
    app: messaging-service
  ports:
    - name: web
      protocol: TCP
      port: 8080
      targetPort: 8080
    - name: socekt
      protocol: TCP
      port: 8081
      targetPort: 8081
