k8s/virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: messaging-virtualservice
  namespace: backend
spec:
  hosts:
    - "*"
  gateways:
    - istio-system/default-gateway
  http:
    - match:
        - uri:
            prefix: /messaging-service
      #      rewrite:
      #        uri: /
      route:
        - destination:
            port:
              number: 8080
            host: messaging-service-head.backend.svc.cluster.local
